<resources>
    <string name="app_name">Customized School App</string>

    <!-- Edittext hints-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>


    <!-- Buttons-->
    <string name="login">Log In</string>

    <!--Drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Navigation menu-->
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="quiz_exam">Quiz/Exam</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="attendances">Attendances</string>
    <string name="announcements">Announcements</string>
    <string name="events">Events</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
</resources>
